--- a/about.html
+++ b/about.html
@@ -1,13 +1,11 @@
 ---
 layout: page
-title: Pages 
-header: Pages
+title: About 
+header: All About Me
 group: navigation
 ---
 {% include JB/setup %}
 
-<h2>All Pages</h2>
-<ul>
-{% assign pages_list = site.pages %}
-{% include JB/pages_list %}
-</ul>
+<p>
+	I am a Front-End Web Designer & Developer. I live on the road, coding & designing amazing things for the web. O and ocassionally I stop what I am working on to write & share on this blog.
+</p>
